# dynesty

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Demo 1 - Overview.ipynb  Demo 2 - Dynamic Nested Sampling.ipynb  Demo 3 - Advanced Options.ipynb  Demo 4 - Errors.ipynb  Demo.ipynb  LICENSE  LICENSE.md  MANIFEST.in  README.md  README.rst  RELEASE.md  TESTING.md  TODO.md  dynesty.py  mnest.py  nest.py  nestle.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  runtests.py  setup.py  test.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: test.yml
demos/: Demo 1 - Overview.ipynb  Demo 2 - Dynamic Nested Sampling.ipynb  Demo 3 - Errors.ipynb  Demo 4 - What is new in 3.0.ipynb  Examples -- 200-D Multivariate Normal.ipynb  Examples -- 25-D Correlated Normal.ipynb  Examples -- 250-D Multivariate Normal.ipynb  Examples -- 50-D Correlated Normal.ipynb  Examples -- 50-D Multivariate Normal.ipynb  Examples -- Eggbox.ipynb  Examples -- Exponential Wave.ipynb  Examples -- Gaussian Shells.ipynb  Examples -- Hyper-Pyramid.ipynb  Examples -- Importance Reweighting.ipynb  Examples -- Linear Regression.ipynb  Examples -- LogGamma.ipynb  Examples -- Noisy Likelihoods.ipynb
docs/: Makefile  api.rst  conf.py  deploy.sh  devdocs.rst  index.rst  make.bat  prior.rst  requirements.txt  stopping.rst
docs/source/: api.rst  conf.py  crashcourse.rst  dynamic.rst  errors.rst  examples.rst  faq.rst  index.rst  overview.rst  quickstart.rst  references.rst
dynesty/: __init__.py  bounding.py  dynamicsampler.py  dynesty.py  ellipsoid.py  fakepool.py  globalsampler.py  localsampler.py  nestedsamplers.py  plotting.py  priors.py  results.py  sampler.py  samplers.py  sampling.py  utils.py
dynesty/radfriends/: __init__.py  jarvispatrick.py  metric.py  mlfriends.py  neighbors.py  region.py
examples/: eggbox.ipynb  line.ipynb  plot_eggbox.py  plot_ellipsoids.py  plot_line.py  plot_shells.py
py/dynesty/: __init__.py  _version.py  bounding.py  dynamicsampler.py  dynesty.py  internal_samplers.py  nestedsamplers.py  plotting.py  pool.py  proposals.py  results.py  sampler.py  sampling.py  utils.py
tests/: conftest.py  test_adapt.py  test_all.py  test_blob.py  test_bound_interface.py  test_dyn.py  test_egg.py  test_ellipsoid.py  test_gau.py  test_highdim.py  test_misc.py  test_ncdim.py  test_notebooks.py  test_pathology.py  test_periodic.py  test_plateau.py  test_plot.py  test_pool.py  test_printing.py  test_proposal_stats.py  test_proposals.py  test_reflect.py  test_resume.py  test_rosenbrock.py  test_sampler_interface.py  test_sampling.py  test_saver.py  test_volume.py  utils.py
